<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_title" />

    <ImageButton
        android:id="@+id/imageButtonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/service_start"
        android:onClick="onButtonStartClick"
        android:src="@drawable/actionsprocessstarticon64x64" />
        
    <ImageButton
        android:id="@+id/imageButtonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/imageButtonStart"
        android:contentDescription="@string/service_info"
        android:onClick="onButtonStopClick"
        android:src="@drawable/actionsprocessstopicon64x64" />

    <ImageButton
        android:id="@+id/imageButtonDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/imageButtonStop"
        android:contentDescription="@string/internet_download"
        android:onClick="onButtonDownloadClick"
        android:src="@drawable/networkdownloadicon64x64" />

    <ImageButton
        android:id="@+id/imageButtonInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/imageButtonDownload"
        android:contentDescription="@string/service_info"
        android:onClick="onButtonInfoClick"
        android:src="@drawable/actionsinfoicon64x64" />
    
    
    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButtonStart"
        android:maxLines="10"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:text="@string/empty_line" />

    <TextView 
        android:id="@+id/textViewTicker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/empty_line"
        />
</RelativeLayout>